1. HTML  - babel로 컴파일 한 파일로 동작할 수 있도록 변경 2. CSS  - div 와 input에 overflow:hidden 추가 3. JS  - 수수료 계산 부분 완성   - key 이벤트 중복실행 방지     - keyDown과 keyPress에 e.stopPropagation 추가  - keyDown에서 ESC를 입력했을 때, 초기화 기능  추가  - keyPress에서 input 값을 가져올 때 파싱해서 ,를 제거한 다음 numPrice 변수에 입력  - Enter를 눌렀을 때, 계산이 될 수 있도록 제작.  - 변수명 r1을 calcResult로 변경 및 적용 완료.  - calc1에서도 결과가 출력될 수 있도록 변경.

--- a/css/calc.scss
+++ b/css/calc.scss
@@ -114,6 +114,7 @@ section {
       border-radius: 10px;
       text-align: right;
       padding-right: 10px;
+      overflow: hidden;
     }
     input {
       float: left;
@@ -125,6 +126,7 @@ section {
       outline: none;
       width: 92%;
       text-decoration: none;
+      overflow: hidden;
     }
   }
 }
